hphp/hack/test/typecheck/ffp/function_public_bad.php.exp
File "function_public_bad.php", line 4, characters 7-12:
Top-level function cannot have modifier 'public' (Parsing[1002])
