hphp/hack/test/typecheck/ffp/function_public_bad.php
<?hh // partial
// Copyright 2004-present Facebook. All Rights Reserved.

async public function foo(): void {
}
